# mlp

./: .gitmodules  CMakeLists.txt  mode-spec.tex  readme.md  spec.md  test_osc_tx.scd
.github/: FUNDING.yaml
diary/: diary.md
mlp/: CMakeLists.txt  diary.md  mlp.scd  readme.md  tapper.scd  test_osc_tx.scd
mlp-plug/: CMakeLists.txt  MidiManager.hpp  MlpGui.cpp  MlpGui.hpp  MlpGuiIo.hpp  MlpLookAndFeel.hpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ScriptManager.hpp
mlp-plug/gui-main/: Main.cpp  MainComponent.cpp  MainComponent.h
mlp-plug/gui-osc/: Main.cpp  MainComponent.cpp  OscIo.hpp  readme.txt
mlp/diary/: diary.md
mlp/src/: AudioContext.hpp  Constants.hpp  EventQueue.hpp  Mlp.hpp
mlp/src/cli/: AudioBackend.cpp  AudioBackend.hpp  main.cpp
mlp/src/mlp/: Constants.hpp  Kernel.hpp  LoopLayer.hpp  Phasor.hpp  SmoothSwitch.hpp
mlp/src/mlp-cli/: main.cpp
resources/: main.wren
src/: Mlp.hpp
src/mlp/: AudioTaper.cpp  AudioTaper.hpp  Constants.hpp  Kernel.hpp  LayerBehavior.hpp  LoopLayer.hpp  Modes.hpp  Outputs.hpp  Phasor.hpp  SmoothSwitch.hpp  StateReflector.hpp  Types.hpp  Weaver.cpp  Weaver.hpp
src/mlp-cli/: main.cpp
